--- a/trunk/client/alpha-factor.html
+++ b/trunk/client/alpha-factor.html
@@ -206,6 +206,15 @@
 		</div>
 
     </div>
+
+    <div class="container_3">
+        <div class="row">
+			<div class="grid_3 center">
+				<a href="terms-conditions.html" class="terms-conditions">Use of this information is subject to terms and conditions</a>
+			</div>
+		</div>
+	</div>
+
 </body>
 
 </html>
