--- a/trunk/client/index.html
+++ b/trunk/client/index.html
@@ -305,6 +305,14 @@
 		No companies matched your search.
 	</div>
 	
+    <div class="container_3">
+        <div class="row">
+			<div class="grid_3 center">
+				<a href="terms-conditions.html" class="terms-conditions">Use of this information is subject to terms and conditions</a>
+			</div>
+		</div>
+	</div>	
+	
 	<div class="template change-picker">
 	
 		<div class="percentChange-container">
