--- a/trunk/client/alpha-factor.html
+++ b/trunk/client/alpha-factor.html
@@ -4,6 +4,7 @@
 <head>
     <title>SGX - Alpha Factors</title>
     <link rel="stylesheet" href="stylesheets/style.css" />
+	<link rel="stylesheet" href="stylesheets/vendor/colorbox/colorbox.css" />
     <link rel="shortcut icon" href="img/sgxPortal.ico">
     <script type="text/javascript" src="javascripts/app/XD.js"></script>
     <script type="text/javascript" src="javascripts/vendor/requirejs/require.js" data-main="javascripts/main.js"></script>
